fix(tests): Use JUnit @TempDir to create temporary files